objects/vtse__Recipient__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vtse__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <displayFormat>RN-{0}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>